# price_prediction_project

./: .gitignore  main.py  pyproject.toml
src/: logging_cfg.py
src/price_prediction/: config.py  data.py
